# SvenBXT

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  SvenBXT.cpp  SvenBXT.h  Utils.cpp  Utils.h  engine_patterns.hpp  hlsdk_mini.hpp  metahook_emulation.cpp  runsven.sh  svenbxt.cfg  svenmod_emulation.hpp
.github/workflows/: CI.yml
cl_dll/: cdll_int.cpp  cdll_int.h  hud.cpp  hud.h  hud_origin.cpp  hud_origin.h  hud_speedometer.cpp  hud_speedometer.h  view.cpp  view.h
cmake/: ToolchainLinuxGCC.cmake
licenses/: BXT_LICENSE
src/: .clang-format  CMakeLists.txt  CTimer.h  SvenBXT.cpp  SvenBXT.h  Utils.cpp  Utils.h  engine_patterns.hpp  iface.cpp  iface.hpp  metahook_emulation.hpp  svenmod_emulation.cpp
src/cl_dll/: cdll_int.cpp  hud.cpp  hud.h  hud_crosshair.cpp  hud_crosshair.h  hud_jumpspeed.cpp  hud_jumpspeed.h  hud_origin.cpp  hud_speedometer.cpp  hud_speedometer.h  hud_timer.cpp  hud_timer.h  hud_viewangles.cpp  hud_viewangles.h  opengl_utils.cpp  opengl_utils.hpp  parsemsg.cpp  view.cpp  view.h
src/cmake/: InputFilesList.cmake  PlatformInfo.cmake
src/dlls/: server.cpp  server.h
src/engine/: gl_screen.cpp  gl_screen.h  server.h
